# Compilation

./: .gitignore  CMakeLists.txt  Makefile  calendar.txt  regex.txt  reserved_word.txt  syntax.txt  t.cpp  test_regex.txt  tmp.txt
src/: ast.cpp  ast.hpp  ast_regex.hpp  binder.cpp  binder.hpp  dumper.cpp  dumper.hpp  lexer.cpp  lexer.hpp  test_lexer.cpp  test_parser.cpp  test_token.cpp  token.cpp  token.hpp  type_checker.cpp  type_checker.hpp
test/: string_parsing.cpp  test.txt
test_prog/: basi_op.c_  function.c_  if.c_  loop.c_  print_test.c_  string.c_  test_lexer1.txt
